--- a/index.html
+++ b/index.html
@@ -12,19 +12,17 @@
     <div class="wrapper">
         <div class="game">
             <div class="player">
-                <div class="playerHand"></div>
+                <div class="playerHand">1</div>
             </div>
             <div class="cpu1">
-                <div class="cpu1Hand"></div>
+                <div class="cpu1Hand">2</div>
             </div>
             <div class="cpu2">
-                <div class="cpu2Hand"></div>
+                <div class="cpu2Hand">3</div>
             </div>
             <div class="cpu3">
-                <div class="cpu3Hand"></div>
+                <div class="cpu3Hand">4</div>
             </div>
-            <div class="books"></div>
-            
         </div>
         <!--end of game -->>
     </div>
